samples/troubleshooting/invalid/R10.dita
<?xml version="1.0" encoding="UTF-8"?>
<troubleshooting>
  <title>T</title>
  <prolog/>
  <troublebody>
    <troubleSolution>
      <remedy>
        <steps><step><cmd>Do it.</cmd></step></steps>
      </remedy>
    </troubleSolution>
  </troublebody>
</troubleshooting>